--- a/paper/references.bib
+++ b/paper/references.bib
@@ -38,3 +38,107 @@
     address	= {New York, NY, USA}
 }
 
+@article{movies,
+author = { L.   Duan  and  W. N.   Street  and  E.   Xu },
+title = {Healthcare information systems: data mining methods in the creation of a clinical recommender system},
+journal = {Enterprise Information Systems},
+volume = {5},
+number = {2},
+pages = {169-181},
+year  = {2011},
+publisher = {Taylor & Francis},
+doi = {10.1080/17517575.2010.541287},
+URL = {https://doi.org/10.1080/17517575.2010.541287},
+eprint = {https://doi.org/10.1080/17517575.2010.541287}
+}
+
+@article{films,
+author = {Min, Fan and Zhu, William},
+year = {2013},
+month = {05},
+pages = {},
+title = {Mining top-k granular association rules for recommendation},
+journal = {Proceedings of the 2013 Joint IFSA World Congress and NAFIPS Annual Meeting, IFSA/NAFIPS 2013},
+doi = {10.1109/IFSA-NAFIPS.2013.6608601}
+}
+
+@article{books,
+author = {He, Xu and Min, Fan and Zhu, William},
+year = {2012},
+month = {12},
+pages = {},
+title = {A Comparative Study of Discretization Approaches for Granular
+Association Rule Mining},
+volume = {37},
+journal = {Canadian Conference on Electrical and Computer Engineering},
+doi = {10.1109/CCECE.2013.6567823}
+}
+
+@article{survey,
+title = {Recommender systems survey},
+journal = {Knowledge-Based Systems},
+volume = {46},
+pages = {109-132},
+year = {2013},
+issn = {0950-7051},
+doi = {https://doi.org/10.1016/j.knosys.2013.03.012},
+url = {https://www.sciencedirect.com/science/article/pii/S0950705113001044},
+author = {J. Bobadilla and F. Ortega and A. Hernando and A. Gutiérrez},
+keywords = {Recommender systems, Collaborative filtering, Similarity measures, Evaluation metrics, Prediction, Recommendation, Hybrid, Social, Internet of things, Cold-start},
+abstract = {Recommender systems have developed in parallel with the web. They were initially based on demographic, content-based and collaborative filtering. Currently, these systems are incorporating social information. In the future, they will use implicit, local and personal information from the Internet of things. This article provides an overview of recommender systems as well as collaborative filtering methods and algorithms; it also explains their evolution, provides an original classification for these systems, identifies areas of future implementation and develops certain areas selected for past, present or future importance.}
+}
+
+@article{memory,
+author = {Delgado, Joaquin and Ishii, Naohiro},
+year = {1999},
+month = {01},
+pages = {},
+title = {Memory-Based Weighted-Majority Prediction for Recommender Systems}
+}
+
+@article{coin,
+author = {Belkin, Nicholas and Croft, W.},
+year = {1992},
+month = {12},
+pages = {29-38},
+title = {Information Filtering and Information Retrieval: Two Sides of the Same Coin?},
+volume = {35},
+journal = {Commun. ACM},
+doi = {10.1145/138859.138861}
+}
+
+@inproceedings{combining,
+  title={Combining Content-Based and Collaborative Filters in an Online Newspaper},
+  author={M. Claypool and Anuja Gokhale and Tim Miranda and Paul Murnikov and Dmitry Netes and M. Sartin},
+  booktitle={SIGIR 1999},
+  year={1999}
+}
+
+
+@inproceedings{commerce,
+author = {Schafer, J. Ben and Konstan, Joseph and Riedl, John},
+title = {Recommender Systems in E-Commerce},
+year = {1999},
+isbn = {1581131763},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/336992.337035},
+doi = {10.1145/336992.337035},
+booktitle = {Proceedings of the 1st ACM Conference on Electronic Commerce},
+pages = {158–166},
+numpages = {9},
+keywords = {customer loyalty, up-sell, mass customization, electronic commerce, recommender systems, interface, cross-sell},
+location = {Denver, Colorado, USA},
+series = {EC '99}
+}
+
+@article{survey1,
+author = {Burke, Robin},
+year = {2002},
+month = {11},
+pages = {},
+title = {Hybrid Recommender Systems: Survey and Experiments},
+volume = {12},
+journal = {User Modeling and User-Adapted Interaction},
+doi = {10.1023/A:1021240730564}
+}
